// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ResetPasswordFormGroup should pass newPasswordError to the specific New Password input 1`] = `
<div>
  <div
    class="govuk-form-group "
  >
    <div
      class="govuk-form-group govuk-form-group--error"
    >
      <label
        class="govuk-label govuk-label--s"
        for="newPassword"
      >
        New password
      </label>
      <div
        class="govuk-hint"
        id="newPassword-hint"
      >
        Enter your new password
      </div>
      <span
        class="govuk-error-message"
        data-test="password-input_newPassword-error"
        id="newPassword-error"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error:
        </span>
         
        Your password is too short
      </span>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="newPassword-hint newPassword-error"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30 govuk-input--error"
          data-testid="password-input_newPassword"
          id="newPassword"
          name="newPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="newPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_newPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="confirmPassword"
      >
        Confirm password
      </label>
      <div
        class="govuk-hint"
        id="confirmPassword-hint"
      >
        Re-type your password
      </div>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="confirmPassword-hint"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30"
          data-testid="password-input_confirmPassword"
          id="confirmPassword"
          name="confirmPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="confirmPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_confirmPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordFormGroup should render correctly without any errors 1`] = `
<div>
  <div
    class="govuk-form-group "
  >
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="newPassword"
      >
        New password
      </label>
      <div
        class="govuk-hint"
        id="newPassword-hint"
      >
        Enter your new password
      </div>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="newPassword-hint"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30"
          data-testid="password-input_newPassword"
          id="newPassword"
          name="newPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="newPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_newPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="confirmPassword"
      >
        Confirm password
      </label>
      <div
        class="govuk-hint"
        id="confirmPassword-hint"
      >
        Re-type your password
      </div>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="confirmPassword-hint"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30"
          data-testid="password-input_confirmPassword"
          id="confirmPassword"
          name="confirmPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="confirmPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_confirmPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordFormGroup should render with group error styling and message when passwordMismatch is true 1`] = `
<div>
  <div
    class="govuk-form-group govuk-form-group--error"
  >
    <span
      class="govuk-error-message"
      id="password-mismatch-error"
    >
      <span
        class="govuk-visually-hidden"
      >
        Error:
      </span>
       
      Passwords do not match
    </span>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="newPassword"
      >
        New password
      </label>
      <div
        class="govuk-hint"
        id="newPassword-hint"
      >
        Enter your new password
      </div>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="newPassword-hint"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30"
          data-testid="password-input_newPassword"
          id="newPassword"
          name="newPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="newPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_newPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="confirmPassword"
      >
        Confirm password
      </label>
      <div
        class="govuk-hint"
        id="confirmPassword-hint"
      >
        Re-type your password
      </div>
      <div
        class="govuk-input__wrapper govuk-password-input__wrapper"
      >
        <input
          aria-describedby="confirmPassword-hint"
          autocapitalize="none"
          autocomplete="current-password"
          class="govuk-input govuk-password-input__input govuk-input--width-30"
          data-testid="password-input_confirmPassword"
          id="confirmPassword"
          name="confirmPassword"
          spellcheck="false"
          type="password"
        />
        <button
          aria-controls="confirmPassword"
          aria-label="Show password"
          class="govuk-button govuk-button--secondary govuk-password-input__toggle"
          data-testid="password-input-button_confirmPassword"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
  </div>
</div>
`;
